--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "react-helmet": "^5.2.0",
+    "styled-components": "^3.2.6",
     "tslint-config-prettier": "^1.12.0",
     "tslint-plugin-prettier": "^1.3.0",
     "tslint-react": "^3.5.1",
@@ -15,7 +16,9 @@
     "typescript-eslint-parser": "^15.0.0",
     "yarn": "^1.6.0"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
